# 2024_I_AV_SW_ARCH

./: CMakeLists.txt
include/common/: base_board.hpp  commands.hpp  config.hpp  logger.hpp  system.hpp  types.hpp
include/common/channel/: base_data_channel.hpp  base_intranet_channel.hpp  circular_buffer.hpp  sensor_data.hpp
include/common/channel/modifier/: command_handler.hpp
include/common/core/: base_board.hpp  fsm.hpp  system.hpp
include/common/core/channel/: base_async_channel.hpp  base_data_channel.hpp  base_intranet_channel.hpp  base_sync_channel.hpp  circular_buffer.hpp
include/common/core/data/: base_data_component.hpp  base_intranet.hpp
include/common/data/: base_intranet.hpp
include/common/modifier/: command_handler.hpp  command_receiver.hpp  data_component.hpp  sensor_handler.hpp
include/common/sensors/: accel_sensor.hpp  baro_sensor.hpp  base_sensor.hpp  gnss_sensor.hpp  gyro_sensor.hpp  mag_sensor.hpp
include/rpi/: base_rpi_board.hpp  rpi_board.hpp  rpi_command.hpp  rpi_control_path.hpp  rpi_data.hpp  rpi_data_path.hpp  rpi_intranet.hpp  rpi_output.hpp  rpi_paths.hpp  rpi_telecom.hpp
include/teensy/: base_teensy_board.hpp  base_teensy_sensors.hpp  base_teensy_telecom.hpp  teensy_board.hpp  teensy_command.hpp  teensy_control_path.hpp  teensy_data.hpp  teensy_data_path.hpp  teensy_intranet.hpp  teensy_output.hpp  teensy_paths.hpp  teensy_sensors.hpp  teensy_telecom.hpp
src/common/: base_board.cpp  system.cpp
src/common/channel/: base_intranet_channel.cpp
src/common/channel/modifier/: command_handler.cpp
src/common/core/: base_board.cpp  system.cpp
src/common/core/channel/: base_intranet_channel.cpp  base_sync_channel.cpp
src/common/core/modifier/: command_handler.cpp
src/common/data/: base_intranet.cpp
src/common/modifier/: command_receiver.cpp  data_component.cpp  sensor_handler.cpp
src/rpi/: rpi_board.cpp  rpi_command.cpp  rpi_control_path.cpp  rpi_data.cpp  rpi_data_paths.cpp  rpi_intranet.cpp  rpi_output.cpp  rpi_paths.cpp  rpi_telecom.cpp
src/teensy/: teensy_board.cpp  teensy_command.cpp  teensy_control_path.cpp  teensy_data.cpp  teensy_data_path.cpp  teensy_intranet.cpp  teensy_output.cpp  teensy_paths.cpp  teensy_sensors.cpp
test/: create_rpi_board_test.cpp  create_teensy_board_test.cpp  demo_rpi_slave.cpp  demo_teensy_master.cpp
